--- a/styles/timothe.css
+++ b/styles/timothe.css
@@ -21,7 +21,6 @@ A BON ENTENDEUR, SALUT !
 /* QUI SOMMES NOUS */
 /* ******************************************************************** */
 
-
 .cadre_jaune{
   background-color: #f3c062;
   width: 45%;
@@ -90,3 +89,24 @@ A BON ENTENDEUR, SALUT !
 /* ******************************************************************** */
 /* ARCHIVES */
 /* ******************************************************************** */
+
+
+.block {
+  margin: auto;
+}
+
+.block-hidden {
+  height: 100px;
+  display: none;
+  background: #FFA726;
+}
+
+.block-visible {
+  height: 40px;
+  line-height: 40px;
+  cursor: pointer;
+  background: #FF9800;
+  color: #FFFFFF;
+  text-align: center;
+  text-transform: uppercase;
+}
