archives un peu + avancées et deroulant qui marche

--- a/styles/timothe.css
+++ b/styles/timothe.css
@@ -105,15 +105,16 @@ p{
 
 #filter em{
   font-weight: bold;
-
+  background-color: white;
 }
+
+input
 
 .block {
   margin: auto;
 }
 
 .block-hidden {
-  height: 500px;
   display: none;
 }
 
