--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -9,9 +9,7 @@
         width: 100vw;
         flex-direction: row;
     }
-    .main_categories {
-        flex-flow: column wrap;
-    }
+    .main_categories {flex-flow: column wrap;}
     
     .main_categories_presentation,
     .main_categories_objectifs,
@@ -23,7 +21,7 @@
     .header_photo_titre {margin-left: 0px;}
     .header img {margin: 0 auto;}
     
-    .presentation_bas {}
+    
 }
 
 
@@ -32,10 +30,11 @@
 /* SMARTPHONE */
 /* ******************************************************************** */
 
-@media screen and (max-width: 600px){
-    .wrapper {
-        width: 100%;
-    }
+@media screen and (max-width: 600px) {
+    .wrapper {width: 100%;}
+    .header {height: 250px;}
+    .footer {height: 210px;}
+    .header img {margin-top: 3vh;}
     
     .main_categories_presentation,
     .main_categories_objectifs,
@@ -43,11 +42,42 @@
     .main_categories_don {
         box-shadow: none;
     }
-
     .main_categories_presentation,
     .main_categories_objectifs,
     .main_categories_actualites {
         margin-top: 0px;
         padding: 40px 20px 20px 20px;
     }
+
+    nav ul {
+        height: 0;
+        overflow: hidden;
+        transition: height 0.5s;
+    }
+    nav ul.open {
+        height: 12em;
+    }
+
+    #open,
+    #close {
+        color: #fdf4ed;
+        text-align: center;
+        text-decoration: none;
+        position: absolute;
+        top: 2vh;
+        right: 8vw;
+        font-size: 2em;
+    }
+
+    #open {
+        display: block;}
+    
+    
+    .presentation_bas {
+        display: block;
+    }
+    .cadre_jaune,
+    .presentation_droite {width: 100%;}
+    .cadre_jaune {margin-top: 50px;}
+
 }
