correction page presentation

--- a/styles/timothe.css
+++ b/styles/timothe.css
@@ -57,6 +57,9 @@ A BON ENTENDEUR, SALUT !
   margin-bottom: 30px;
 }
 
+.membres{
+  margin-top: 15px;
+}
 
 /* ******************************************************************** */
 /* OBJECTIFS */
