--- a/styles/auryane.css
+++ b/styles/auryane.css
@@ -123,8 +123,81 @@ box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
 	background-color: rgb(245, 202, 95);
 	margin-left: 30px;
 	padding: 20px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.flex_texte{
+	margin: 15px 15px 0 0;
+	padding: 20px;
+	font-size: 30px;
+	font-weight: 900px;
+	background-color: rgb(227, 164,0);
 }
 
 .titre_don{
 	color: rgb(213,141,0);
+	width: 100%;
+}
+
+.texte{
+	width: 100%;
+	margin-top: 20px;
+}
+
+.butt_texte{
+	width: 100%;
+	text-transform: uppercase;
+	border-style: none;
+	background-color: rgb(245, 202, 95);
+	font-size: 30px;
+	font-weight: 900;
+	margin-top: 20px;
+}
+
+.butt_form{
+	text-transform: uppercase;
+	background-color: rgb(245, 202, 95);
+	font-size: 30px;
+	font-weight: 900;
+	margin-top: 20px;
+	padding: 10px 20px;
+	color: white;
+	border-style: none;
+}
+
+/*PARTENAIRES*/
+.part{
+	margin-top: 30px;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.flex_part{
+	margin-top: 20px;
+	display: flex;
+	width: 50%;
+}
+
+.div_part{
+	flex-direction: row;
+	position: relative;
+}
+
+.part_texte{
+	margin-left: 15px;
+	position: absolute;
+	bottom: 0px;
+	width: 170px;
+}
+
+.nom_part{
+	color: rgb(84,83,80);
+	font-size: 1.2em;
+	font-weight: 900;
+}
+
+.lien{
+	font-size: 0.7em;
 }
