--- a/styles/auryane.css
+++ b/styles/auryane.css
@@ -54,6 +54,7 @@ p{
 		position: absolute;
     bottom: 0px;
     left: 0px;
+    cursor: pointer;
 }
 
 .resume{
@@ -64,8 +65,19 @@ p{
 /* ******************************************************************** */
 /* GALERIE */
 /* ******************************************************************** */
+
+.recherche{
+	margin-top: 20px;
+	background-color: white;
+}
+
+.champ{
+	border-style: none;
+	width: 97.5%;
+}
+
 .controlplay {
-    
+    cursor: pointer;
 }
 
 .flex_multi{
@@ -134,6 +146,7 @@ box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
 	font-size: 30px;
 	font-weight: 900px;
 	background-color: rgb(227, 164,0);
+	cursor: pointer;
 }
 
 .titre_don{
@@ -154,6 +167,7 @@ box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
 	font-size: 30px;
 	font-weight: 900;
 	margin-top: 20px;
+	cursor: pointer;
 }
 
 .butt_form{
@@ -165,6 +179,23 @@ box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
 	padding: 10px 20px;
 	color: white;
 	border-style: none;
+	cursor: pointer;
+}
+
+/*hover*/
+.flex_texte:hover{
+	color: rgb(227, 164,0);
+	background-color: white;
+}
+
+.butt_form:hover{
+	color: rgb(245, 202, 95);
+	background-color: white;
+}
+
+.butt_texte:hover{
+	color: rgb(245, 202, 95);
+	background-color: white;
 }
 
 /*PARTENAIRES*/
