--- a/styles/auryane.css
+++ b/styles/auryane.css
@@ -21,45 +21,19 @@ A BON ENTENDEUR, SALUT !
 /* ******************************************************************** */
 /* ACTUALITES */
 /* ******************************************************************** */
-p{
+p {
 	line-height: 20px;
-}
-
-.titre_principal{
-	color: rgb(84,83,80);
-}
-
-.titre_sec{
-	color: rgb(84,83,80);
-	font-size: 1.5em;
-	font-weight: 900;
 }
 
 .flex_contain{
 	display: flex;
-	margin-top: 50px;
+    flex-flow: row wrap;
+    justify-content: space-between;
+	margin-top: 30px;
 }
 
-.flex_actu{
-	flex-direction: row;
-	height: 245px;
-	position: relative;
-}
-
-.actu_text{
-	margin-left: 40px;
-}
-
-.end{
-		position: absolute;
-    bottom: 0px;
-    left: 0px;
-    cursor: pointer;
-}
-
-.resume{
-	margin-top: 40px;
-}
+.flex_actu {width: 45%;}
+.resume{margin-top: 40px;}
 
 
 /* ******************************************************************** */
@@ -76,20 +50,9 @@ p{
 	width: 97.5%;
 }
 
-.controlplay {
-    cursor: pointer;
-}
 
-.flex_multi{
-	display: flex;
-	flex-wrap: wrap;
-	width: 930px;
-}
-
-.flex_vid{
-	margin-top: 50px;
-	flex-direction: column;
-	width: 400px;
+.flex_item{
+	width: 45%;
 }
 
 .titre_vid{
@@ -98,13 +61,11 @@ p{
 	font-size: 1.2em;
 }
 
-.right{
-	margin-left: 30px;
-}
-
-.text{
+.flex_item h3,
+.flex_item p {
 	margin-top: 10px;
 }
+
 /* ******************************************************************** */
 /* CONTACT */
 /* ******************************************************************** */
@@ -126,10 +87,12 @@ box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
 	display: flex;
 }
 
+/*
 .flex_itm{
 	margin-top: 50px;
 	width: 400px;
 }
+*/
 
 .flex_don{
 	background-color: rgb(245, 202, 95);
