--- a/styles/auryane.css
+++ b/styles/auryane.css
@@ -42,7 +42,7 @@ p {
 
 .recherche{
 	margin-top: 20px;
-	background-color: white;
+	background-color: #fdf4ed;
 }
 
 .champ{
@@ -69,97 +69,49 @@ p {
 /* ******************************************************************** */
 /* CONTACT */
 /* ******************************************************************** */
-.form-control{
-display: block;
-width: 100%;
-height: 34px;
-padding: 6px 12px;
-font-size: 14px;
-line-height: 1.4;
-color: #555;
-background-color: #fff;
-border: 1px solid #ccc;
-border-radius: 4px;
-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-}
 
-.flex_contact{
-	display: flex;
-}
 
-/*
-.flex_itm{
-	margin-top: 50px;
-	width: 400px;
-}
-*/
 
 .flex_don{
 	background-color: rgb(245, 202, 95);
-	margin-left: 30px;
 	padding: 20px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+    max-height: 300px;
 }
 
-.flex_texte{
-	margin: 15px 15px 0 0;
-	padding: 20px;
-	font-size: 30px;
-	font-weight: 900px;
+.flex_texte {
+    display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+    margin-top: 20px;
+}
+
+.flex_texte p {
+    width: 100px;
+	padding: 0.5em;
+	font-size: 1.75em;
+	font-weight: 900;
 	background-color: rgb(227, 164,0);
 	cursor: pointer;
 }
 
-.titre_don{
-	color: rgb(213,141,0);
-	width: 100%;
-}
+.flex_texte p:last-of-type { width: 216px;}
 
-.texte{
-	width: 100%;
-	margin-top: 20px;
-}
 
-.butt_texte{
-	width: 100%;
-	text-transform: uppercase;
-	border-style: none;
-	background-color: rgb(245, 202, 95);
-	font-size: 30px;
-	font-weight: 900;
-	margin-top: 20px;
-	cursor: pointer;
-}
-
-.butt_form{
-	text-transform: uppercase;
-	background-color: rgb(245, 202, 95);
-	font-size: 30px;
-	font-weight: 900;
-	margin-top: 20px;
-	padding: 10px 20px;
-	color: white;
-	border-style: none;
-	cursor: pointer;
-}
 
 /*hover*/
-.flex_texte:hover{
+.flex_texte p:hover{
 	color: rgb(227, 164,0);
-	background-color: white;
+	background-color: #fdf4ed;
 }
 
-.butt_form:hover{
+.bouton-jaune-upp:hover,
+.bouton-jaune:hover,
+.bouton-jaune-smart,
+.controlplay {
 	color: rgb(245, 202, 95);
-	background-color: white;
+	background-color: #fdf4ed;
 }
 
-.butt_texte:hover{
-	color: rgb(245, 202, 95);
-	background-color: white;
-}
 
 /*PARTENAIRES*/
 .part{
@@ -181,16 +133,9 @@ box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
 
 .part_texte{
 	margin-left: 15px;
-	position: absolute;
-	bottom: 0px;
-	width: 170px;
 }
 
-.nom_part{
-	color: rgb(84,83,80);
-	font-size: 1.2em;
-	font-weight: 900;
-}
+
 
 .lien{
 	font-size: 0.7em;
